--- a/nbs/Fixing Data.ipynb
+++ b/nbs/Fixing Data.ipynb
@@ -977,9 +977,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:axlml]",
+   "display_name": "axlml",
    "language": "python",
-   "name": "conda-env-axlml-py"
+   "name": "axlml"
   },
   "language_info": {
    "codemirror_mode": {
