--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,19 +1,65 @@
-@article{oldroyd1986,
-  title={Charles Darwin's theory of evolution: a review of our present understanding},
-  author={Oldroyd, David R},
-  journal={Biology and Philosophy},
-  volume={1},
-  number={2},
-  pages={133--168},
-  year={1986},
-  publisher={Springer}
-}
-
 @misc{axelrodproject,
   author       = {{ {The Axelrod project developers} }},
-  title        = {Axelrod: <RELEASE TITLE>},
+  title        = {Axelrod: 3.0.0},
   month        = apr,
   year         = 2016,
   doi          = {<DOI INFORMATION>},
   url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
+}
+
+@article{knight2016,
+  title={An open framework for the reproducible study of the iterated prisoner's dilemma},
+  author={Knight, Vincent Anthony and Campbell, Owen and Harper, Marc and Langner,
+   Karol M and Campbell, James and Campbell, Thomas and Carney, Alex and Chorley,
+   Martin and Davidson-Pilon, Cameron and Glass, Kristian and others},
+  journal={Journal of Open Research Software},
+  volume={4},
+  number={1},
+  year={2016},
+  publisher={Ubiquity Press}
+}
+
+@article{Harper2017,
+  author = {Harper, Marc AND Knight, Vincent AND Jones, Martin AND Koutsovoulos,
+   Georgios AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+  journal = {PLOS ONE},
+  publisher = {Public Library of Science},
+  title = {Reinforcement learning produces dominant strategies for the Iterated Prisoner’s Dilemma},
+  year = {2017},
+  month = {12},
+  volume = {12},
+  url = {https://doi.org/10.1371/journal.pone.0188046},
+  pages = {1-33},
+  number = {12},
+  doi = {10.1371/journal.pone.0188046}
+}
+
+@article{mathieu2017,
+  title = {New Winning Strategies for the Iterated Prisoner's Dilemma},
+  author = {Mathieu, Philippe and Delahaye, Jean-Paul},
+  journal = {Journal of Artificial Societies and Social Simulation},
+  ISSN = {1460-7425},
+  volume = {20},
+  number = {4},
+  pages = {12},
+  year = {2017},
+  URL = {http://jasss.soc.surrey.ac.uk/20/4/12.html},
+  DOI = {10.18564/jasss.3517},
+  keywords = {Game Theory, Group Strategy, Iterated Prisoner&rsquo;s Dilemma (IPD),
+  Agent Behaviour, Memory, Opponent Identification},
+}
+
+@inproceedings{Au2006,
+  title={Accident or intention: that is the question (in the Noisy Iterated Prisoner's Dilemma)},
+  author={Au, Tsz-Chiu and Nau, Dana},
+  booktitle={Proceedings of the fifth international joint conference on Autonomous agents and multiagent systems},
+  pages={561--568},
+  year={2006},
+  organization={ACM}
+}
+
+@article{Mathieu2017,
+  title={New winning strategies for the iterated prisoner's dilemma},
+  author={Mathieu, Philippe and Delahaye, Jean-Paul},
+  year={2017}
 }
