--- a/nbs/A.0.0. Seperating tournament types.ipynb
+++ b/nbs/A.0.0. Seperating tournament types.ipynb
@@ -25,6 +25,26 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'../data/standar_processed.csv'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'../data/standar.csv'.replace('.csv', '_processed.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
